# raid-savior

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  eventos_schema.json  pyproject.toml  requirements.txt  setup.py
.tmp_dagster_home_unb4hn49/history/: runs.db
.tmp_dagster_home_unb4hn49/history/runs/: .db  18ddc76e-7c5d-4784-b0f7-d4add2f9a2a4.db  index.db
.tmp_dagster_home_unb4hn49/schedules/: schedules.db
.tmp_dagster_home_unb4hn49/storage/18ddc76e-7c5d-4784-b0f7-d4add2f9a2a4/compute_logs/: hhpuexxu.err  phtubscx.err  phtubscx.out  pnkzbhre.err  pnkzbhre.out
docs/: Fase_7-4_dim_player_vs_dim_raid.md  Fase_7-4_troubleshooting_iceberg_vectorization.md  fase_1.md  fase_2.md  fase_3.md  fase_4.md  fase_5.md  fase_6.md  fase_7.md  refactorizacion_generador.md
docs/architecture/: fase_1_schema_eventos_y_generacion_sintetica.md  fase_2_receptor_http_ingesta_bronze.md  fase_3_transformacion_bronze_to_silver.md  fase_4_etl_silver_to_gold.md  fase_5_etl_silver_to_gold_spark.md  fase_6_orquestacion_dagster.md  fase_7_table_formats_apache_iceberg.md
infra/minio/: docker-compose.yml
legacy/: app_fase2_prototipo.py  diagnose_pipeline.py  gold_layer.py  replay_offline_to_http.py
notebooks/: pruebas.ipynb
schemas/: eventos_schema.json
scripts/: README.md  download_spark_jars.sh  generate_dataset.py  inspect_bronze_vs_silver.py  inspect_gold.py  replay_offline_to_http.py  run_bronze_to_silver.py  test_etl_silver.py  test_gold_pipeline.py  test_ingestion_manual.py
scripts/analytics/: inspect_bronze_vs_silver.py  inspect_gold.py  validate_etl_bronze_silver.py  validate_gold_layer.py
scripts/api/: receiver.py
scripts/etl/: diagnose_pipeline.py  inspect_bronze_vs_silver.py  inspect_minimal_spark.py  inspect_silver.py  inspect_silver_schema.py  run_bronze_to_silver.py  run_silver_to_gold.py  verify_prerequisites_72.py
scripts/generators/: generate_massive_http.py  replay_raids.py
scripts/pipeline/: inspect_iceberg_connection.py  silver_parquet_to_iceberg.py
src/: config.py  test_gold_pipeline.py  test_ingestion_manual.py  test_minimal.py  test_pipeline_integration.py
src/analytics/: aggregators.py  gold_layer.py  inspect_gold.py
src/api/: app.py  receiver.py  sse_bus.py
src/etl/: __init__.py  bronze_to_silver.py  diagnose_pipeline.py  gold_iceberg_dim_player.py  gold_iceberg_dim_raid.py  gold_iceberg_player_stats.py  gold_iceberg_raid_summary.py  ingest_bronze_production.py  inspect_production_json.py  inspect_silver.py  inspect_silver_schema.py  run_silver_to_gold.py  spark_session.py  spark_silver_to_gold.py  test_iceberg_connection.py  transformers.py
src/generators/: class_profiles.py  generate_dataset.py  generate_massive_http.py  raid_event_generator.py  replay_offline_to_http.py
src/pipeline/: assets.py  definitions.py  jobs.py  schedules.py
src/schemas/: eventos_schema.py  export_schema.py  gold_schemas.py
src/storage/: ingest_large_dataset.py  minio_client.py
tests/: cliente_sse.html  test_eventos_schema.py  test_generator.py
tests/api/: test_receiver.py
tests/generators/: conftest.py  test_class_profiles.py  test_generator.py
tests/integration/: conftest.py  test_pipeline_integration.py
tests/schemas/: test_eventos_schema.py
tests/unit/: test_analytics_aggregators.py  test_etl_silver.py  test_gold_pipeline.py  test_ingestion_manual.py
